--- a/trunk/jquery.safari-checkbox.css
+++ b/trunk/jquery.safari-checkbox.css
@@ -1,5 +1,4 @@
-.jquery-safari-checkbox       {display: inline;}
-.jquery-safari-checkbox-box   {display: inline; font-size: 16px; line-height: 16px; cursor: pointer; cursor: hand;}
+.jquery-safari-checkbox {display: inline; font-size: 16px; line-height: 16px; cursor: pointer; cursor: hand;}
 .jquery-safari-checkbox .mark {display: inline;}
 
 .jquery-safari-checkbox img {vertical-align: middle; width: 16px; height: 16px;}
@@ -11,7 +10,7 @@
 .jquery-safari-checkbox-hover img{
 	background-position: -16px 0px;
 }
-.jquery-safari-checkbox-checked .jquery-safari-checkbox img{
+.jquery-safari-checkbox-checked img{
 	background-position: 0px -16px;
 }
 .jquery-safari-checkbox-checked .jquery-safari-checkbox-hover img {
